--- a/app/templates/redacoes.html
+++ b/app/templates/redacoes.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}LearnLoop One{% endblock %}
+{% block title %}Estudaê - Lista de Redações{% endblock %}
 
 {% block styled %}
 <style>
