nova mensagem de alerta

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -11,5 +11,9 @@
     <button type="submit">Entrar</button>
   </form>
   <small>Não tem uma conta? <a href="/cadastro">clique aqui</a></small>
+
+  <span class="alert">
+    Se você já tinha uma conta no Estudaê, ela deve ter sido apagada por conta da atualização da infraestrutura do Estudaê, por tanto, é recomendado que você recrie novamente!
+  </span>
 </div>
 {% endblock %}
