--- a/app/templates/session.html
+++ b/app/templates/session.html
@@ -32,8 +32,7 @@ a{
 <br>
    <div class="add-doc">
       <h2>Adicione um arquivo a sua sessão de estudos:</h2>
-      <input type="file" id="documento-novo" data-sessao="{{sessao.id}}">
-      <button onclick="sendArquivo('{{sessao.id}}')">Adicionar</button>
+      <button onclick="abrirModalArquivo('{{sessao.id}}')">Adicionar</button>
    </div>
 <br>
    <div id="documentos">
