--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -97,7 +97,9 @@
   <div class="functions dados" style="margin-top: 2em;">
     <h3>Revisões do Dia</h3>
   
-    
+    {% if revisoes|length == 0 %}
+    <p>Nenhuma revisão pendente pra hoje.</p>
+    {% endif %}
 
     {% for rev in revisoes %}
       <div style="background-color: #000;" class="function" onclick="window.location.href='/session/{{rev.id_session}}'">
