--- a/app/templates/termos.html
+++ b/app/templates/termos.html
@@ -1,24 +1,24 @@
 {% extends 'base.html' %}
 
-{% block title %}Termos de Uso | LearnLoop{% endblock %}
+{% block title %}Termos de Uso | Estudaê{% endblock %}
 
 {% block metas %}
-<title>Termos de Uso | LearnLoop</title>
-<meta name="description" content="Conheça os Termos de Uso do LearnLoop. Regras e responsabilidades ao utilizar nossa plataforma de estudos.">
+<title>Termos de Uso | Estudaê</title>
+<meta name="description" content="Conheça os Termos de Uso do Estudaê. Regras e responsabilidades ao utilizar nossa plataforma de estudos.">
 {% endblock %}
 
 {% block content %}
 <div class="container">
   <h1>Termos de Uso</h1>
-  <p>Bem-vindo ao LearnLoop! Ao utilizar nosso site e serviços, você concorda com os seguintes Termos de Uso.</p>
+  <p>Bem-vindo ao Estudaê! Ao utilizar nosso site e serviços, você concorda com os seguintes Termos de Uso.</p>
 
-  <p><strong>Aceitação dos Termos:</strong> Ao acessar ou usar a plataforma LearnLoop, você concorda em cumprir estes termos e todas as leis aplicáveis. Se não concordar, não utilize o site.</p>
+  <p><strong>Aceitação dos Termos:</strong> Ao acessar ou usar a plataforma Estudaê, você concorda em cumprir estes termos e todas as leis aplicáveis. Se não concordar, não utilize o site.</p>
 
-  <p><strong>Uso da Plataforma:</strong> Você deve ser maior de 13 anos. Concorda em usar o LearnLoop de forma legal e segura, respeitando outros usuários. É responsável por manter sua conta segura.</p>
+  <p><strong>Uso da Plataforma:</strong> Você deve ser maior de 13 anos. Concorda em usar o Estudaê de forma legal e segura, respeitando outros usuários. É responsável por manter sua conta segura.</p>
 
-  <p><strong>Propriedade Intelectual:</strong> Todo o conteúdo do LearnLoop é protegido por leis de direitos autorais e pertence ao LearnLoop ou seus licenciadores.</p>
+  <p><strong>Propriedade Intelectual:</strong> Todo o conteúdo do Estudaê é protegido por leis de direitos autorais e pertence ao Estudaê ou seus licenciadores.</p>
 
-  <p><strong>Limitação de Responsabilidade:</strong> O LearnLoop não se responsabiliza por quaisquer danos resultantes do uso ou incapacidade de usar o site.</p>
+  <p><strong>Limitação de Responsabilidade:</strong> O Estudaê não se responsabiliza por quaisquer danos resultantes do uso ou incapacidade de usar o site.</p>
 
   <p><strong>Modificações nos Termos:</strong> Podemos modificar estes termos a qualquer momento, e as alterações serão publicadas no site.</p>
 
