Novo Radar do Conhecimento

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -82,6 +82,11 @@
       <img src="{{ url_for('static', filename='img/icon-next.png') }}">
     </div>
 
+    <div class="function" onclick="window.location.href='/radar-conhecimento'">
+      <strong>Radar do Conhecimento (NOVIDADE)</strong>
+      <img src="{{ url_for('static', filename='img/icon-next.png') }}">
+    </div>
+
 
 
   </div>
